fix: Changed hero layout to help with fonts visibility

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -123,13 +123,14 @@
 
 .header {
   width: 100%;
-  position: absolute;
-  top: 48px;
-  height: 100px;
+  position: fixed;
+  top: 0;
+  height: 70px;
   z-index: 2;
   display: flex;
   justify-content: space-between;
-  transition: background-color .3s, height .3s;
+  background: #f4f4f4;
+  transition: height .3s, box-shadow .3s;
 
   .logo {
     width: 120px;
@@ -140,7 +141,7 @@
 
   .nav-link {
     position: relative;
-    font-size: 1.25rem !important;
+    font-size: 1.125rem !important;
     transition: font-size .3s;
 
     &::before {
@@ -161,10 +162,8 @@
   }
 
   &.scrolled {
-    position: fixed;
-    top: 0;
-    background-color: #fafafa;
     height: 60px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 
     & .logo {
       width: 100px;
@@ -192,28 +191,45 @@
     flex-wrap: wrap;
   }
 
-  &__content-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 3.75rem 2.125rem;
-    width: 100%;
-    max-width: 624px;
-    margin-top: 2.5rem;
-    height: 424px;
-    overflow: hidden;
-    animation-delay: .1s;
+  &__content{
 
-    & p {
-      margin-bottom: 3rem;
+    &-text {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 3.75rem 2.125rem;
+      width: 100%;
+      max-width: 624px;
+      margin-top: 2.5rem;
+      height: 424px;
+      overflow: hidden;
+      animation-delay: .1s;
+  
+      & p {
+        margin-bottom: 3rem;
+      }
+  
+      & .btn {
+        align-self: flex-start;
+      }
+  
+      &__paragrap-wrapper {
+        width: 100%;
+        max-width: 408px;
+      }
+
+      @media (max-width: 664px) {
+        height: auto;
+      }
     }
 
-    & .btn {
-      align-self: flex-start;
-    }
+    &__btn-wrapper {
+      display: flex;
+      gap: 1rem;
 
-    @Media (max-width: 664px) {
-      height: auto;
+      & .btn {
+        height: 100%;
+      }
     }
   }
 
@@ -238,9 +254,22 @@
       }
     }
 
+    
     @media (max-width: 664px) {
       display: none;
     }
+  }
+
+  &::before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 64%;
+    height: 153%;
+    background-color: #f4f4f4;
+    transform: rotate(-18deg) translateY(-50%);
   }
 }
 
@@ -729,8 +758,8 @@ section.carousel {
   width: 24px;
   height: 24px;
   margin-left: -12px;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-left: 1px solid #1A1A1A;
+  border-bottom: 1px solid #1A1A1A;
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   -webkit-animation: sdb07 2s infinite;
