--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -4,17 +4,13 @@ body {
 }
 
 h1, h2, h3, .btn {
-  font-family: "Krona One", sans-serif !important;
+  font-family: "Inter Tight", sans-serif !important;
   margin: 0;
 }
 
-p {
-  font-weight: 1.5rem;
-}
-
 h1 {
-  line-height: 4.75rem;
-  font-size: 4rem;
+  line-height: .85;
+  font-size: 5rem;
 }
 
 body, a {
